Bug 536486, remove IsDestroyingFrames check now that frames are available from content nodes, fixes possible leak, r=roc